(Service) Create daily_check_lists table
